--- a/Exams/Exam1B_ChatGPT/.project
+++ b/Exams/Exam1B_ChatGPT/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test3</name>
+	<name>Exam1B_ChatGPT</name>
 	<comment></comment>
 	<projects>
 	</projects>
